# daily_stock_analysis

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.github/instructions/: governance.instructions.md
.github/workflows/: 00-daily-analysis.yml
docs/: CHANGELOG.md  DEPLOY.md  DEPLOY_EN.md  full-guide.md  full-guide_EN.md  notifications.md  settings-help.md
scripts/: check_ai_assets.py
src/: config.py  notification.py  notification_capabilities.py  notification_routing.py
src/core/: config_registry.py  pipeline.py
src/notification_sender/: __init__.py  serverchan_sender.py
src/services/: notification_diagnostics.py  system_config_service.py
tests/: test_notification.py  test_notification_sender.py
