[project]
name = "daily-stock-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12.0",
    "alphasift",
    "baostock>=0.8.0",
    "dingtalk-stream>=0.24.3",
    "discord-py>=2.0.0",
    "efinance>=0.5.5",
    "exchange-calendars>=4.13.0",
    "fake-useragent>=1.4.0",
    "fastapi>=0.109.0",
    "google-search-results>=2.4.0",
    "httpx[socks]",
    "imgkit>=1.2.0",
    "jinja2>=3.1.0",
    "json-repair>=0.55.1",
    "lark-oapi>=1.0.0",
    "litellm>=1.80.10,!=1.82.7,!=1.82.8,<2.0.0",
    "longbridge>=4.0.5,<5.0.0",
    "lxml-html-clean",
    "markdown2>=2.4.0",
    "newspaper3k>=0.2.8",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pynacl>=1.5.0",
    "pypinyin>=0.50.0",
    "pytdx>=1.72",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.0",
    "tavily-python>=0.3.0",
    "tenacity>=8.2.0",
    "tickflow>=0.1.24",
    "tiktoken>=0.8.0,<0.12.0",
    "tushare>=1.4.0",
    "uvicorn[standard]>=0.27.0",
    "yfinance>=0.2.0",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "__pycache__", ".env", "venv", ".venv"]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]  # assert 语句在测试中是允许的

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
alphasift = { git = "https://github.com/ZhuLinsen/alphasift.git", rev = "377049857cc04175dc3cca62121ee41adec6cdb8" }
